--- a/package.json
+++ b/package.json
@@ -2,13 +2,20 @@
   "name": "final-project",
   "version": "0.1.0",
   "private": true,
+  "engines": {
+    "node": ">=14.0.0",
+    "yarn": ">=1.22.0",
+    "npm": "please-use-yarn"
+  },
   "scripts": {
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "prepare": "husky install"
   },
   "dependencies": {
+    "axios": "^0.27.2",
     "next": "12.1.6",
     "react": "18.2.0",
     "react-dom": "18.2.0",
@@ -39,6 +46,7 @@
     "eslint-plugin-sonarjs": "0.13.0",
     "eslint-plugin-testing-library": "5.5.1",
     "eslint-plugin-unicorn": "42.0.0",
+    "husky": "^8.0.1",
     "typescript": "4.7.3"
   },
   "resolutions": {
