--- a/package.json
+++ b/package.json
@@ -16,14 +16,19 @@
   },
   "dependencies": {
     "axios": "^0.27.2",
+    "dotenv-safe": "^8.2.0",
+    "google-map-react": "^2.1.10",
     "next": "12.1.6",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "sharp": "^0.30.6"
+    "react-google-maps": "^9.4.5",
+    "sharp": "^0.30.6",
+    "use-supercluster": "^0.4.0"
   },
   "devDependencies": {
     "@babel/eslint-parser": "7.18.2",
     "@next/eslint-plugin-next": "12.1.6",
+    "@types/google-map-react": "^2.1.7",
     "@types/node": "17.0.41",
     "@types/react": "18.0.12",
     "@types/react-dom": "18.0.5",
