--- a/tsconfig.json
+++ b/tsconfig.json
@@ -18,8 +18,7 @@
     "noFallthroughCasesInSwitch": true,
     "skipLibCheck": true,
     "strict": true,
-    "incremental": true,
-    "noErrorTruncation": true
+    "incremental": true
   },
 
   "include": [
