--- a/package.json
+++ b/package.json
@@ -11,14 +11,22 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
+    "migrate": "dotenv ley",
     "lint": "next lint",
     "prepare": "husky install"
   },
   "dependencies": {
     "axios": "^0.27.2",
+    "bcrypt": "^5.0.1",
+    "camelcase-keys": "^8.0.1",
+    "cookie": "^0.5.0",
+    "csrf": "^3.1.0",
+    "dotenv-cli": "^5.1.0",
     "dotenv-safe": "^8.2.0",
     "google-map-react": "^2.1.10",
+    "ley": "^0.7.1",
     "next": "12.1.6",
+    "postgres": "^3.2.4",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-google-maps": "^9.4.5",
@@ -28,6 +36,9 @@
   "devDependencies": {
     "@babel/eslint-parser": "7.18.2",
     "@next/eslint-plugin-next": "12.1.6",
+    "@types/bcrypt": "^5.0.0",
+    "@types/cookie": "^0.5.1",
+    "@types/dotenv-safe": "^8.1.2",
     "@types/google-map-react": "^2.1.7",
     "@types/node": "17.0.41",
     "@types/react": "18.0.12",
