--- a/package.json
+++ b/package.json
@@ -20,13 +20,16 @@
     "bcrypt": "^5.0.1",
     "camelcase-keys": "^8.0.1",
     "cookie": "^0.5.0",
+    "cookies": "^0.8.0",
     "csrf": "^3.1.0",
     "dotenv-cli": "^5.1.0",
     "dotenv-safe": "^8.2.0",
     "google-map-react": "^2.1.10",
     "ley": "^0.7.1",
     "next": "12.1.6",
+    "node-forge": "^1.3.1",
     "postgres": "^3.2.4",
+    "qrcode.react": "^3.1.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-google-maps": "^9.4.5",
@@ -38,9 +41,12 @@
     "@next/eslint-plugin-next": "12.1.6",
     "@types/bcrypt": "^5.0.0",
     "@types/cookie": "^0.5.1",
+    "@types/cookies": "^0.7.7",
     "@types/dotenv-safe": "^8.1.2",
     "@types/google-map-react": "^2.1.7",
     "@types/node": "17.0.41",
+    "@types/node-forge": "^1.0.2",
+    "@types/qrcode.react": "^1.0.2",
     "@types/react": "18.0.12",
     "@types/react-dom": "18.0.5",
     "@typescript-eslint/eslint-plugin": "5.27.1",
