--- a/package.json
+++ b/package.json
@@ -16,6 +16,12 @@
     "prepare": "husky install"
   },
   "dependencies": {
+    "@emotion/react": "^11.9.3",
+    "@emotion/styled": "^11.9.3",
+    "@fontsource/roboto": "^4.5.7",
+    "@material-ui/core": "^4.12.4",
+    "@mui/icons-material": "^5.8.4",
+    "@mui/material": "^5.8.7",
     "axios": "^0.27.2",
     "bcrypt": "^5.0.1",
     "camelcase-keys": "^8.0.1",
@@ -33,6 +39,8 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-google-maps": "^9.4.5",
+    "react-swipeable-views": "^0.14.0",
+    "react-swipeable-views-utils": "^0.14.0",
     "sharp": "^0.30.6",
     "use-supercluster": "^0.4.0"
   },
@@ -49,6 +57,8 @@
     "@types/qrcode.react": "^1.0.2",
     "@types/react": "18.0.12",
     "@types/react-dom": "18.0.5",
+    "@types/react-swipeable-views": "^0.13.1",
+    "@types/react-swipeable-views-utils": "^0.13.3",
     "@typescript-eslint/eslint-plugin": "5.27.1",
     "@typescript-eslint/parser": "5.27.1",
     "@upleveled/eslint-config-upleveled": "2.12.0",
