Added heroku stuff

--- a/.env.example
+++ b/.env.example
@@ -3,3 +3,5 @@ PGHOST = xxxxxxxxxx
 PGDATABASE = xxxxxxxxxx
 PGUSERNAME = xxxxxxxxxx
 PGPASSWORD = xxxxxxxxxx
+GOOGLE_KEY = xxxxxxxxxx
+RAPIDAPI_KEY = xxxxxxxxxx
