--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "ley": "^0.7.1",
     "next": "12.1.6",
     "node-forge": "^1.3.1",
+    "pg-connection-string": "^2.5.0",
     "postgres": "^3.2.4",
     "qrcode.react": "^3.1.0",
     "react": "18.2.0",
