Changed heroku stuff

--- a/package.json
+++ b/package.json
@@ -4,8 +4,7 @@
   "private": true,
   "engines": {
     "node": ">=14.0.0",
-    "yarn": ">=1.22.0",
-    "npm": "please-use-yarn"
+    "yarn": ">=1.22.0"
   },
   "scripts": {
     "dev": "next dev",
